# paanini

./: .gitignore  Cargo.toml  LICENSE  NPM_PACKAGE_CREATION_PROMPT.md  README.md  bool_test.panini  comprehensive_test.paanini  comprehensive_test.panini  concat_test.paanini  debug_vars.panini  final_demo.paanini  final_demo.panini  output.rs  sanskrit_bool_test.panini  simple_test.paanini  test_unicode.paanini
docs/: language-guide.md
examples/: calculator.panini  hello.paanini  hello.panini  loops.paanini  loops.panini
npm/: .gitignore  DEVELOPMENT.md  LICENSE  README.md  index.js  install.js  package.json  test.js
src/: interpreter.rs  main.rs  main_old.rs  server.rs  transpiler.rs
static/: index.html  index_fixed.html
